fix: squash several bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@ body {
 		)
 		rgb(var(--background-start-rgb));
 	font-family: 'Be Vietnam Pro', sans-serif;
+	overflow-x: hidden;
 }
 
 /* Custom Tailwind Styles */
@@ -42,6 +43,6 @@ body {
 		@apply flex items-center justify-between;
 	}
 	.bg-backdrop {
-		@apply relative flex place-items-center before:absolute before:h-[300px] before:w-[480px] before:-translate-x-1/2 before:rounded-full before:blur-2xl before:content-[''] after:absolute after:-z-20 after:h-[180px] after:w-[240px] after:translate-x-1/3 after:bg-gradient-conic after:blur-2xl after:content-[''] before:bg-gradient-to-br before:from-transparent before:to-blue-700 before:opacity-10 after:from-sky-900 after:via-[#0141ff] after:opacity-40 before:lg:h-[360px];
+		@apply relative overflow-x-hidden flex place-items-center before:absolute before:h-[300px] before:w-[480px] before:-translate-x-1/2 before:rounded-full before:blur-2xl before:content-[''] after:absolute after:-z-20 after:h-[180px] after:w-[240px] after:translate-x-1/3 after:bg-gradient-conic after:blur-2xl after:content-[''] before:bg-gradient-to-br before:from-transparent before:to-blue-700 before:opacity-10 after:from-sky-900 after:via-[#0141ff] after:opacity-40 before:lg:h-[360px];
 	}
 }
